--- a/Javascript Projects/Countdown Timer/style.css
+++ b/Javascript Projects/Countdown Timer/style.css
@@ -57,6 +57,28 @@
     background-position: center;
 }
 
+.showcase video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.text {
+    position: relative;
+    z-index: 10;
+}
+
 .menu {
     
 }
