--- a/Javascript Projects/Countdown Timer/style.css
+++ b/Javascript Projects/Countdown Timer/style.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;600&display=swap');
 
+:root {
+    --overlay-color: #03a9f4;
+}
 
 * {
     box-sizing: border-box;
@@ -20,6 +23,11 @@
     background:#111;
     color:#fff;
     z-index:2;
+    transition: 0.8s;
+}
+
+.showcase.active {
+    right:300px;
 }
 
 .showcase header {
@@ -37,6 +45,10 @@
 .logo {
     text-transform:uppercase;
     cursor: pointer;
+    color: #03a9f4;
+    background: ghostwhite;
+    border: 1px solid lightgrey;
+
 }
 
 .toggle {
@@ -45,7 +57,7 @@
     height: 60px;
     background:url('./images/menu.png');
     background-repeat: no-repeat;
-    background-size: 30px;
+    background-size: 40px;
     background-position: center;
     cursor: pointer;
 }
@@ -79,6 +91,106 @@
     z-index: 10;
 }
 
+.text h2 {
+    font-size: 5em;
+    font-weight: 800;
+    line-height: 1em;
+    text-transform: uppercase;
+}
+
+.text h2 {
+    font-size: 4em;
+    font-weight: 700;
+    line-height: 1em;
+    text-transform: uppercase;
+}
+
+.text p {
+    font-size: 1.1em;
+    margin: 20px 0;
+    font-weight: 400;
+    max-width: 700px;
+}
+
+.text a {
+    display: inline;
+    font-size: 1em;
+    background: #fff;
+    padding: 10px 30px;
+    text-decoration: none;
+    color: #111;
+    margin-top: 10px;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    transition: 0.2s;
+}
+
+.text a:hover {
+    letter-spacing: 8px;
+}
+
+.social {
+    position: absolute;
+    bottom: 20px;
+    z-index: 10;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.social li {
+    list-style: none;
+}
+
+.social li a {
+    display: inline-block;
+    filter: invert(1);
+    margin-right: 20px;
+    transform: scale(.5);
+    transition: 0.5s;
+}
+
+.social li a:hover {
+    transform: scale(.5) translateY(-15px);
+}
+
 .menu {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 300px;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.menu ul {
+    position: relative;
+    list-style: none;
+}
+
+.menu ul li a {
+    text-decoration: none;
+    font-size: 24px;
+}
+
+.menu ul li a:hover {
+    color: var(--overlay-color);
+}
+
+@media(max-width: 798px) {
+    .showcase, .showcase header {
+        padding: 40px;
+    }
     
+    .text h2 {
+        font-size: 3em;
+    }
+
+    .text h3 {
+        font-size: 2em;
+    }
+
 }
