--- a/Javascript Projects/Countdown Timer/style.css
+++ b/Javascript Projects/Countdown Timer/style.css
@@ -45,7 +45,7 @@
 .logo {
     text-transform:uppercase;
     cursor: pointer;
-    color: #03a9f4;
+    color: darkblue;
     background: ghostwhite;
     border: 1px solid lightgrey;
 
@@ -92,14 +92,14 @@
 }
 
 .text h2 {
-    font-size: 5em;
+    font-size: 4em;
     font-weight: 800;
     line-height: 1em;
     text-transform: uppercase;
 }
 
-.text h2 {
-    font-size: 4em;
+.text h3 {
+    font-size: 2em;
     font-weight: 700;
     line-height: 1em;
     text-transform: uppercase;
